--- a/PAGES/landing.html
+++ b/PAGES/landing.html
@@ -1,71 +1,57 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../STYLE/landing.css">
-    <title>Save • Home</title>
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Carrossel de Teste</title>
+  <link rel="stylesheet" href="/STYLE/landing.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <nav>
-        <div class="frst">
-            <ul class="menu">
-                <li><a href="#">Suporte</a></li>
-                <li><a href="#">Saq</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Ações</a></li>
-            </ul>
-        </div>
-        <div class="scnd">
-            <img src="../PICS/logo-corte.png" alt="">
-        </div>
-        <div class="thrd">
-            <ul class="menu">
-                <li><a href="#">Câmbio</a></li>
-                <li><a href="#">Planilhas</a></li>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Entrar</a></li>
-            </ul>
-        </div>
-    </nav>
+  <nav>
+    <div class="frst">
+        <ul class="menu">
+            <li><a href="#">Suporte</a></li>
+            <li><a href="#">Saq</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Ações</a></li>
+        </ul>
+    </div>
+    <div class="scnd">
+        <img src="../PICS/logo-corte.png" alt="">
+    </div>
+    <div class="thrd">
+        <ul class="menu">
+            <li><a href="#">Câmbio</a></li>
+            <li><a href="#">Planilhas</a></li>
+            <li><a href="#">Sobre Nós</a></li>
+            <li><a href="#">Entrar</a></li>
+        </ul>
+    </div>
+</nav>  
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../PICS/2148780591.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../PICS/carrossel2.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../PICS/carrossel3.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+
+  <div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/PICS/carrossel1.jpg"class ="d-block w-100" alt="...">
       </div>
-
-
-      <div class="nada">
-
+      <div class="carousel-item">
+        <img src="/PICS/carrossel2.jpg" class="d-block w-100" alt="...">
       </div>
-
-    <script src="../JS/landin.js"></script>
-    
+      <div class="carousel-item">
+        <img src="/PICS/carrossel3.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 </body>
 </html>
