--- a/TESTES/Data-base-Alpha.html
+++ b/TESTES/Data-base-Alpha.html
@@ -1,100 +1,176 @@
-<!doctype html>
-<html lang = "en" >
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset = "utf-8" >
-<meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "Basic Alpha Vantage script with user data entry,local storage and save data to file" >
-<meta name = "keywords" content = "Alpha Vantage,predIQtiv,JavaScript,GitHub" >
-<meta name = "date" content = "2018-01-14" >
-<title>Alpha Vantage Cookbook ~ Get Data Selected Parameters</title>
-<style>
-/* Copyright (c) 2018 predIQtiv. MIT License */
-
-	body { font: 12pt monospace; margin: 0 auto; max-width: 800px; }
-
-	a { color: crimson; text-decoration: none; }
-	a:hover, a:focus { background-color: yellow; color: #aaa; text-decoration: underline }
-
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alpha Vantage API Test</title>
 </head>
 <body>
+    <style>
+        div{
+            display: flex;
+            align-items: center;
+            gap: 1vw;
+        }
+    </style>
+    <h1>Consulta de Ação</h1>
+    <select id="stockSelect" onchange="change()">
+        <optgroup label="Tecnologia">
+            <option value="AAPL">Apple Inc. (AAPL)</option>
+            <option value="MSFT">Microsoft Corp. (MSFT)</option>
+            <option value="GOOGL">Alphabet Inc. (GOOGL)</option>
+            <option value="AMZN">Amazon.com Inc. (AMZN)</option>
+            <option value="META">Meta Platforms Inc. (META)</option>
+            <option value="TSLA">Tesla Inc. (TSLA)</option>
+            <option value="NVDA">NVIDIA Corp. (NVDA)</option>
+            <option value="INTC">Intel Corp. (INTC)</option>
+            <option value="ADBE">Adobe Inc. (ADBE)</option>
+            <option value="CRM">Salesforce.com Inc. (CRM)</option>
+        </optgroup>
 
-	<h3>
-		<a href="https://github.com/prediqtiv/alpha-vantage-cookbook/blob/master/intro-to-javascript-for-alpha-vantage/05-alpha-vantage-get-data-select-parameters.html" target="_blank"><img src="https://status.github.com/images/invertocat.png" height=18 title='Octocat' ></a>
-		<a href="" >Alpha Vantage Cookbook ~ #5 Get Data Select Parameters</a>
-	</h3>
+        <optgroup label="Finanças">
+            <option value="JPM">JPMorgan Chase & Co. (JPM)</option>
+            <option value="BAC">Bank of America Corp. (BAC)</option>
+            <option value="WFC">Wells Fargo & Co. (WFC)</option>
+            <option value="GS">Goldman Sachs Group Inc. (GS)</option>
+            <option value="C">Citigroup Inc. (C)</option>
+            <option value="MS">Morgan Stanley (MS)</option>
+            <option value="V">Visa Inc. (V)</option>
+            <option value="MA">Mastercard Inc. (MA)</option>
+            <option value="AXP">American Express Co. (AXP)</option>
+            <option value="PYPL">PayPal Holdings Inc. (PYPL)</option>
+        </optgroup>
 
-	<p>API key: <input id=inpApiKey onchange=setStorage(); value='demo' ></p>
+        <optgroup label="Saúde">
+            <option value="JNJ">Johnson & Johnson (JNJ)</option>
+            <option value="PFE">Pfizer Inc. (PFE)</option>
+            <option value="MRK">Merck & Co. Inc. (MRK)</option>
+            <option value="ABBV">AbbVie Inc. (ABBV)</option>
+            <option value="BMY">Bristol-Myers Squibb Co. (BMY)</option>
+            <option value="GILD">Gilead Sciences Inc. (GILD)</option>
+            <option value="LLY">Eli Lilly and Co. (LLY)</option>
+            <option value="AMGN">Amgen Inc. (AMGN)</option>
+            <option value="UNH">UnitedHealth Group Inc. (UNH)</option>
+            <option value="CI">Cigna Corp. (CI)</option>
+        </optgroup>
 
-	<p>Symbol: &nbsp;<input id=inpSymbol value='MSFT' ></p>
+        <optgroup label="Consumo">
+            <option value="KO">The Coca-Cola Company (KO)</option>
+            <option value="PEP">PepsiCo Inc. (PEP)</option>
+            <option value="PG">Procter & Gamble Co. (PG)</option>
+            <option value="UL">Unilever PLC (UL)</option>
+            <option value="CL">Colgate-Palmolive Co. (CL)</option>
+            <option value="MCD">McDonald's Corp. (MCD)</option>
+            <option value="NKE">Nike Inc. (NKE)</option>
+            <option value="COST">Costco Wholesale Corp. (COST)</option>
+            <option value="WMT">Wal-Mart Stores Inc. (WMT)</option>
+            <option value="SBUX">Starbucks Corp. (SBUX)</option>
+        </optgroup>
 
-	<p>
+        <optgroup label="Energia">
+            <option value="XOM">Exxon Mobil Corp. (XOM)</option>
+            <option value="CVX">Chevron Corp. (CVX)</option>
+            <option value="COP">ConocoPhillips (COP)</option>
+            <option value="BP">BP PLC (BP)</option>
+            <option value="RDS.A">Royal Dutch Shell PLC (RDS.A)</option>
+            <option value="TOT">TotalEnergies SE (TOT)</option>
+            <option value="ENB">Enbridge Inc. (ENB)</option>
+            <option value="OXY">Occidental Petroleum Corp. (OXY)</option>
+            <option value="EOG">EOG Resources Inc. (EOG)</option>
+            <option value="PXD">Pioneer Natural Resources Co. (PXD)</option>
+        </optgroup>
 
-		function:
-		<select id=selFunction onchange=setInterval();  >
-			<option>TIME_SERIES_INTRADAY</option>
-			<option>TIME_SERIES_DAILY</option>
-			<option>TIME_SERIES_DAILY_ADJUSTED</option>
-			<option>TIME_SERIES_WEEKLY</option>
-			<option>TIME_SERIES_WEEKLY_ADJUSTED</option>
-			<option>TIME_SERIES_MONTHLY</option>
-			<option>TIME_SERIES_MONTHLY_ADJUSTED</option>
-			<option>BATCH_STOCK_QUOTES</option>
-		</select>
+        <optgroup label="Telecomunicações">
+            <option value="T">AT&T Inc. (T)</option>
+            <option value="VZ">Verizon Communications Inc. (VZ)</option>
+            <option value="TMUS">T-Mobile US Inc. (TMUS)</option>
+            <option value="CMCSA">Comcast Corp. (CMCSA)</option>
+            <option value="CHTR">Charter Communications Inc. (CHTR)</option>
+            <option value="S">Sprint Corp. (S)</option>
+            <option value="DISH">Dish Network Corp. (DISH)</option>
+            <option value="ATUS">Altice USA Inc. (ATUS)</option>
+            <option value="FTR">Frontier Communications Corp. (FTR)</option>
+            <option value="LVLT">Level 3 Communications Inc. (LVLT)</option>
+        </optgroup>
 
-		<span id=spnInterval >
-			interval:
-			<select id=selInterval >
-					<option>1min</option>
-					<option>5min</option>
-					<option>15min</option>
-					<option>30min</option>
-					<option>60min</option>
-			</select>
-		</span>
-	</p>
+        <optgroup label="Diversos">
+            <option value="BRK.A">Berkshire Hathaway Inc. (BRK.A)</option>
+            <option value="TSLA">Tesla Inc. (TSLA)</option>
+            <option value="DIS">The Walt Disney Company (DIS)</option>
+            <option value="NFLX">Netflix Inc. (NFLX)</option>
+            <option value="IBM">IBM Corp. (IBM)</option>
+            <option value="GE">General Electric Co. (GE)</option>
+            <option value="GM">General Motors Co. (GM)</option>
+            <option value="F">Ford Motor Co. (F)</option>
+            <option value="CAT">Caterpillar Inc. (CAT)</option>
+            <option value="MMM">3M Company (MMM)</option>
+        </optgroup>
+    </select>
+    
+    <div>
+        <h1>nome: </h1>
+        <h1 id="nome"></h1>
+    </div>
+    <div>
+        <h1>maior preço do dia: </h1>
+        <h2 id="mxdia"></h2>
 
-	<p>
+    </div>
+    <div>
+        <h1>menor preço do dia: </h1>
+        <h2 id="mndia"></h2>
 
-		output size:
-		<select id=selSize >
-			<option>compact</option>
-			<option>full</option>
-		</select>
+    </div>
+    <div>
+        <h1>abertura de preço do dia: </h1>
+        <h2 id="abertura"></h2>
+    </div>
 
-		data type:
-		<select id=selType >
-			<option>json</option>
-			<option>csv</option>
-		</select>
 
-	</p>
-
-	<p>
-		<button onclick=getAlphaVantagedata(); >get Alpha Vantage Data</button>
-		 &nbsp; <button onclick=saveDataToFile(); >Save data to file</button>
-	</p>
-
-	<div id = "divContents" >Data will appear here after you push the button. This may take a number of seconds. Open the developer console to see more details.</div>
-
-<script>
-// Thanks to http://www.alphavantage.co/
-
-const apiKey = 'AHTP1IB6NNE6M8KC'; // Substitua com sua chave de API
-const symbol = 'AAPL'; // Ticker da ação
-const url = `https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=${symbol}&apikey=${apiKey}`;
-
+    <script>
+      const apiKey = 'cr33hs1r01qkkc024o00cr33hs1r01qkkc024o0g'; // Substitua com sua chave de API
+      
+function change(){
+    console.log("mudou");
+    const select = document.getElementById('stockSelect');
+    const symbol = select.value; // Ticker da ação
+     console.log(symbol)
+    const url = `https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${apiKey}`;
 fetch(url)
-  .then(response => response.json())
+  .then(response => {
+    if (!response.ok) {
+      throw new Error(`HTTP error! Status: ${response.status}`);
+    }
+    return response.json();
+  })
   .then(data => {
-    console.log(data); // Aqui você pode manipular os dados recebidos
+    // Manipular os dados recebidos
+    console.log('Dados da ação:', data);
+
+    const { c: currentPrice, h: highPrice, l: lowPrice, o: openPrice, pc: previousClose } = data;
+
+    console.log(`Preço Atual: $${currentPrice}`);
+    console.log(`Preço Máximo do Dia: $${highPrice}`);
+    console.log(`Preço Mínimo do Dia: $${lowPrice}`);
+    console.log(`Preço de Abertura: $${openPrice}`);
+    console.log(`Preço de Fechamento Anterior: $${previousClose}`);
+
+    var nome = document.querySelector('#nome');
+    var mxdia = document.querySelector('#mxdia');
+    var mndia = document.querySelector('#mndia');
+    var abertura = document.querySelector('#abertura');
+
+    nome.innerText = symbol;
+    mxdia.innerText = highPrice;
+    mndia.innerText = lowPrice;
+    abertura.innerText = openPrice;
+
+
   })
   .catch(error => {
     console.error('Erro:', error);
   });
-
-
-
-</script>
+}
+    </script>
 </body>
 </html>
