--- a/TESTES/Data-base-Alpha.html
+++ b/TESTES/Data-base-Alpha.html
@@ -6,6 +6,7 @@
     <title>Alpha Vantage API Test</title>
 </head>
 <body>
+  <a href="../PAGES/landing.php"><button></button></a>
     <style>
         div{
             display: flex;
