--- a/TESTES/Data-base-Alpha.html
+++ b/TESTES/Data-base-Alpha.html
@@ -69,6 +69,8 @@ select::-ms-expand {
     <h1>Consulta de Ação</h1>
     <div class="select">
         <select id="stockSelect" onchange="change()">
+
+          <button id="boton" onclick=""></button>
             <optgroup label="Tecnologia">
                 <option value="AAPL">Apple Inc. (AAPL)</option>
                 <option value="MSFT">Microsoft Corp. (MSFT)</option>
